fix nav bar collapse/expand

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,10 +20,9 @@ p{
 
 .brand {
   background: image-url('logo.png') 0 0 no-repeat;
-  padding-top: 50px;
   width: 137px;
   height: 41px;
-  margin: 10px 10px 0 0;
+  margin: 10px 10px 0 20px;
   text-indent: -999999px;
 }
 
